// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Updated Components/Fields/DatePicker DatePicker 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 37.5rem;
}

.emotion-3 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 #unique-tooltip-id {
  display: none!important;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 10rem;
  background-color: #ffffff;
}

.emotion-4:hover {
  background-color: #F5F5FF;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7:focus::-moz-placeholder {
  color: transparent;
}

.emotion-7:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-7:focus::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus-within+label,
.emotion-7:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-7:focus-within+label {
  font-weight: 700!important;
  color: #1552DD;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  min-width: 2.75rem;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-10 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-radius: 100%;
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
}

.emotion-11 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-11 path {
  fill: #686BB3!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  onClick={[Function]}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      <div
                        className="emotion-6"
                      >
                        <input
                          aria-invalid={false}
                          className="emotion-7"
                          data-testid="input"
                          disabled={false}
                          id="textfield__00"
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Select Date"
                          required={false}
                          value="11/03/2020"
                        />
                        <label
                          className="emotion-8"
                          htmlFor="textfield__00"
                        >
                          Select Date
                           
                        </label>
                      </div>
                      <div
                        aria-hidden={false}
                        className="emotion-9"
                      >
                        <div
                          className="emotion-10"
                          data-testid="calendar_button"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/DatePicker DatePicker and DateRangePicker statuses 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 37.5rem;
}

.emotion-3 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 #unique-tooltip-id {
  display: none!important;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 10rem;
  background-color: #ffffff;
}

.emotion-4:hover {
  background-color: #F5F5FF;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7:focus::-moz-placeholder {
  color: transparent;
}

.emotion-7:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-7:focus::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus-within+label,
.emotion-7:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-7:focus-within+label {
  font-weight: 700!important;
  color: #1552DD;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  min-width: 2.75rem;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-10 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-radius: 100%;
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
}

.emotion-11 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-11 path {
  fill: #686BB3!important;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-12 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.125rem #F882AC;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 10rem;
  background-color: #FFE7F0;
}

.emotion-14:hover {
  background-color: #FFB8D1;
}

.emotion-14:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-18 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  color: #FF176B;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 1;
  color: #CB205D;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-22 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

.emotion-23 {
  width: 1rem;
  height: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 {
  width: 1rem;
  height: 1rem;
}

.emotion-24 path {
  fill: #CB205D!important;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 10rem;
  background-color: #F5F5FF;
}

.emotion-26:hover {
  background-color: #F5F5FF;
}

.emotion-26:focus-within {
  box-shadow: 0 0 0 0.125rem #b9cdfc;
  background-color: #F5F5FF;
}

.emotion-29 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-29::-webkit-input-placeholder {
  color: transparent;
}

.emotion-29::-moz-placeholder {
  color: transparent;
}

.emotion-29:-ms-input-placeholder {
  color: transparent;
}

.emotion-29::placeholder {
  color: transparent;
}

.emotion-29:focus {
  outline: none;
}

.emotion-29:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-29:focus::-moz-placeholder {
  color: transparent;
}

.emotion-29:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-29:focus::placeholder {
  color: transparent;
}

.emotion-29:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-29:focus-within+label,
.emotion-29:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-29:focus-within+label {
  font-weight: 700!important;
  color: #1552DD;
}

.emotion-29:disabled {
  cursor: text;
}

.emotion-32 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  onClick={[Function]}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      <div
                        className="emotion-6"
                      >
                        <input
                          aria-describedby="textfield__00_hintMessage"
                          aria-invalid={false}
                          className="emotion-7"
                          data-testid="input"
                          disabled={false}
                          id="textfield__00"
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Normal"
                          required={false}
                          value="11/03/2020"
                        />
                        <label
                          className="emotion-8"
                          htmlFor="textfield__00"
                        >
                          Normal
                           
                        </label>
                      </div>
                      <div
                        aria-hidden={false}
                        className="emotion-9"
                      >
                        <div
                          className="emotion-10"
                          data-testid="calendar_button"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-12"
                    data-testid="error"
                  >
                    <span
                      id="textfield__00_hintMessage"
                    >
                      Hint Message
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  onClick={[Function]}
                >
                  <div
                    className="emotion-14"
                  >
                    <div
                      className="emotion-5"
                    >
                      <div
                        className="emotion-6"
                      >
                        <input
                          aria-describedby="textfield__00_hintMessage"
                          aria-invalid={true}
                          className="emotion-7"
                          data-testid="input"
                          disabled={false}
                          id="textfield__00"
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Error"
                          required={false}
                          value="11/03/2020"
                        />
                        <label
                          className="emotion-18"
                          htmlFor="textfield__00"
                        >
                          Error
                           
                        </label>
                      </div>
                      <div
                        aria-hidden={false}
                        className="emotion-9"
                      >
                        <div
                          className="emotion-10"
                          data-testid="calendar_button"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-22"
                    data-testid="error"
                  >
                    <div
                      className="emotion-23"
                    >
                      <span
                        className="emotion-24"
                      />
                    </div>
                    <span
                      id="textfield__00_hintMessage"
                    >
                      Error Message
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  onClick={[Function]}
                >
                  <div
                    className="emotion-26"
                  >
                    <div
                      className="emotion-5"
                    >
                      <div
                        className="emotion-6"
                      >
                        <input
                          aria-describedby="textfield__00_hintMessage"
                          aria-invalid={false}
                          className="emotion-29"
                          data-testid="input"
                          disabled={true}
                          id="textfield__00"
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Read-only"
                          readOnly={true}
                          required={false}
                          value="11/03/2020"
                        />
                        <label
                          className="emotion-8"
                          htmlFor="textfield__00"
                        >
                          Read-only
                           
                        </label>
                      </div>
                      <div
                        aria-hidden={false}
                        className="emotion-9"
                      >
                        <div
                          className="emotion-32"
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-12"
                    data-testid="error"
                  >
                    <span
                      id="textfield__00_hintMessage"
                    >
                      Hint Message
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/DatePicker DatePicker with Filter 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 37.5rem;
}

.emotion-3 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 #unique-tooltip-id {
  display: none!important;
}

.emotion-4 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-5 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-5:hover>div {
  background-color: #f3f5f8;
}

.emotion-5:active>div {
  background-color: #e7ebf2;
}

.emotion-5:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-5:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-6 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-6:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-8 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-9 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-9 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-9 span {
  font-weight: 700;
}

.emotion-10 {
  width: 0.875rem;
  height: 0.875rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11 {
  width: 0.875rem;
  height: 0.875rem;
}

.emotion-11 path {
  fill: #0f0f17!important;
}

.emotion-14 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-14:hover>div {
  background-color: #d0defd;
}

.emotion-14:active>div {
  background-color: #b9cdfc;
}

.emotion-14:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-14:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-15 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: black;
  background-color: #e7eefe;
  border: solid 0.0625rem #1451dc;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-15:hover {
  border: solid 0.0625rem #1451dc;
}

.emotion-18 {
  font-weight: 700;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-18 span {
  font-weight: 700;
}

.emotion-19 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  className="emotion-4"
                  data-testid="filter"
                >
                  <button
                    className="emotion-5"
                    data-testid="filter-filter"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      className="emotion-6"
                    >
                      <div
                        className="emotion-7"
                      >
                        <div
                          className="emotion-8"
                        >
                          <span
                            className="emotion-9"
                          >
                            <div
                              data-testid="filter-label"
                            >
                              Select Dates
                               
                            </div>
                          </span>
                        </div>
                        <div
                          className="emotion-10"
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  className="emotion-4"
                  data-testid="filter"
                >
                  <button
                    className="emotion-14"
                    data-testid="filter-filter"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      className="emotion-15"
                    >
                      <div
                        className="emotion-7"
                      >
                        <div
                          className="emotion-8"
                        >
                          <span
                            className="emotion-18"
                          >
                            <span
                              className="emotion-19"
                              data-testid="filter-selected-item-label"
                            >
                              Select Dates : 11/03/2020 - 11/03/2020
                            </span>
                          </span>
                        </div>
                        <div
                          className="emotion-10"
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/DatePicker DatePicker with disabled dates 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 37.5rem;
}

.emotion-3 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 #unique-tooltip-id {
  display: none!important;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 10rem;
  background-color: #ffffff;
}

.emotion-4:hover {
  background-color: #F5F5FF;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7:focus::-moz-placeholder {
  color: transparent;
}

.emotion-7:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-7:focus::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus-within+label,
.emotion-7:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-7:focus-within+label {
  font-weight: 700!important;
  color: #1552DD;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  min-width: 2.75rem;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-10 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-radius: 100%;
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
}

.emotion-11 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-11 path {
  fill: #686BB3!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  onClick={[Function]}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      <div
                        className="emotion-6"
                      >
                        <input
                          aria-invalid={false}
                          className="emotion-7"
                          data-testid="input"
                          disabled={false}
                          id="textfield__00"
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Select Date"
                          required={false}
                          value="11/03/2020"
                        />
                        <label
                          className="emotion-8"
                          htmlFor="textfield__00"
                        >
                          Select Date
                           
                        </label>
                      </div>
                      <div
                        aria-hidden={false}
                        className="emotion-9"
                      >
                        <div
                          className="emotion-10"
                          data-testid="calendar_button"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/DatePicker DateRangePicker 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 37.5rem;
}

.emotion-3 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 #unique-tooltip-id {
  display: none!important;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 16.25rem;
  background-color: #ffffff;
}

.emotion-4:hover {
  background-color: #F5F5FF;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7:focus::-moz-placeholder {
  color: transparent;
}

.emotion-7:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-7:focus::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus-within+label,
.emotion-7:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-7:focus-within+label {
  font-weight: 700!important;
  color: #1552DD;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  min-width: 2.75rem;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-10 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-radius: 100%;
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
}

.emotion-11 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-11 path {
  fill: #686BB3!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  onClick={[Function]}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      <div
                        className="emotion-6"
                      >
                        <input
                          aria-invalid={false}
                          className="emotion-7"
                          data-testid="input"
                          disabled={false}
                          id="textfield__00"
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter Date Range"
                          required={false}
                          value="11/03/2020 - 11/03/2020"
                        />
                        <label
                          className="emotion-8"
                          htmlFor="textfield__00"
                        >
                          Enter Date Range
                           
                        </label>
                      </div>
                      <div
                        aria-hidden={false}
                        className="emotion-9"
                      >
                        <div
                          className="emotion-10"
                          data-testid="calendar_button"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/DatePicker DateRangePicker with preset options 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  height: 37.5rem;
}

.emotion-3 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 #unique-tooltip-id {
  display: none!important;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 16.25rem;
  background-color: #ffffff;
}

.emotion-4:hover {
  background-color: #F5F5FF;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7:focus::-moz-placeholder {
  color: transparent;
}

.emotion-7:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-7:focus::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus-within+label,
.emotion-7:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-7:focus-within+label {
  font-weight: 700!important;
  color: #1552DD;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  min-width: 2.75rem;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-10 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-radius: 100%;
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
}

.emotion-11 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-11 path {
  fill: #686BB3!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  onClick={[Function]}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      <div
                        className="emotion-6"
                      >
                        <input
                          aria-invalid={false}
                          className="emotion-7"
                          data-testid="input"
                          disabled={false}
                          id="textfield__00"
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter Date Range"
                          required={false}
                          value="11/03/2020 - 11/03/2020"
                        />
                        <label
                          className="emotion-8"
                          htmlFor="textfield__00"
                        >
                          Enter Date Range
                           
                        </label>
                      </div>
                      <div
                        aria-hidden={false}
                        className="emotion-9"
                      >
                        <div
                          className="emotion-10"
                          data-testid="calendar_button"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/DatePicker Disabled DatePicker & DateRangePicker 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-3 #unique-tooltip-id {
  display: none!important;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 50%;
  cursor: not-allowed;
  height: 3.25rem;
  min-width: 10rem;
  background-color: #ffffff;
}

.emotion-4:focus-within {
  box-shadow: 0 0 0 0.125rem transparent;
}

.emotion-5 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-5>div {
  position: relative;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-7::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7::-moz-placeholder {
  color: transparent;
}

.emotion-7:-ms-input-placeholder {
  color: transparent;
}

.emotion-7::placeholder {
  color: transparent;
}

.emotion-7:focus {
  outline: none;
}

.emotion-7:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-7:focus::-moz-placeholder {
  color: transparent;
}

.emotion-7:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-7:focus::placeholder {
  color: transparent;
}

.emotion-7:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-7:focus-within+label,
.emotion-7:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-7:focus-within+label {
  font-weight: 700!important;
  color: #1552DD;
}

.emotion-7:disabled {
  cursor: not-allowed;
}

.emotion-8 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-9 {
  min-width: 2.75rem;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-10 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-10:hover,
.emotion-10:focus-visible {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-radius: 100%;
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
}

.emotion-11 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-11 path {
  fill: #686BB3!important;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  opacity: 50%;
  color: #686BB3;
  padding: 0.5rem 0 0;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-12 span {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding: 0;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div>
          <div
            onKeyDown={[Function]}
          >
            <div
              className="emotion-3"
            >
              <div>
                <div
                  onClick={[Function]}
                >
                  <div
                    className="emotion-4"
                  >
                    <div
                      className="emotion-5"
                    >
                      <div
                        className="emotion-6"
                      >
                        <input
                          aria-describedby="textfield__00_hintMessage"
                          aria-invalid={false}
                          className="emotion-7"
                          data-testid="input"
                          disabled={true}
                          id="textfield__00"
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Normal"
                          required={false}
                          value="11/03/2020"
                        />
                        <label
                          className="emotion-8"
                          htmlFor="textfield__00"
                        >
                          Normal
                           
                        </label>
                      </div>
                      <div
                        aria-hidden={false}
                        className="emotion-9"
                      >
                        <div
                          className="emotion-10"
                          data-testid="calendar_button"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          tabIndex={0}
                        >
                          <span
                            className="emotion-11"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className="emotion-12"
                    data-testid="error"
                  >
                    <span
                      id="textfield__00_hintMessage"
                    >
                      This field is disabled
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/DatePicker Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="a-universal-datepicker-component-that-allows-the-user-to-select-a-single-date-or-a-range-of-dates.-user-may-either-type-the-date-in-the-suggested-format-(text-input)-or-click-on-the-‘calendar’-icon-to-the-right-to-open-the-date-picker-modal."
      >
        A universal DatePicker component that allows the user to select a single date or a range of dates. User may either type the date in the suggested format (text input) or click on the ‘calendar’ icon to the right to open the date picker modal.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Fields/DatePicker Playground 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  overflow: inherit;
  text-overflow: inherit;
  width: 100%;
  height: inherit;
  position: relative;
}

.emotion-2 #unique-tooltip-id {
  display: none!important;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #b9cdfc;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: text;
  height: 3.25rem;
  min-width: 10rem;
  background-color: #ffffff;
}

.emotion-3:hover {
  background-color: #F5F5FF;
}

.emotion-3:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #F5F5FF;
}

.emotion-4 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-4>div {
  position: relative;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #1B214F;
  padding: 0;
  display: block;
  position: relative;
  top: 0.4375rem;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-6::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6::-moz-placeholder {
  color: transparent;
}

.emotion-6:-ms-input-placeholder {
  color: transparent;
}

.emotion-6::placeholder {
  color: transparent;
}

.emotion-6:focus {
  outline: none;
}

.emotion-6:focus::-webkit-input-placeholder {
  color: transparent;
}

.emotion-6:focus::-moz-placeholder {
  color: transparent;
}

.emotion-6:focus:-ms-input-placeholder {
  color: transparent;
}

.emotion-6:focus::placeholder {
  color: transparent;
}

.emotion-6:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-6:focus-within+label,
.emotion-6:not(:placeholder-shown)+label {
  font-weight: 700!important;
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
}

.emotion-6:focus-within+label {
  font-weight: 700!important;
  color: #1552DD;
}

.emotion-6:disabled {
  cursor: not-allowed;
}

.emotion-7 {
  -webkit-transition: -webkit-transform 0.25s,opacity 0.25s ease-in-out;
  transition: transform 0.25s,opacity 0.25s ease-in-out;
  transform-origin: 0 0;
  width: 100%;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transform: translate(0.1875rem, -95%) scale(0.8);
  -moz-transform: translate(0.1875rem, -95%) scale(0.8);
  -ms-transform: translate(0.1875rem, -95%) scale(0.8);
  transform: translate(0.1875rem, -95%) scale(0.8);
  color: #686BB3;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  bottom: 0;
  right: 0.1875rem;
  margin: auto;
  white-space: nowrap;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-8 {
  min-width: 2.75rem;
  overflow: visible;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  cursor: unset;
}

.emotion-9 {
  width: 1.25rem;
  height: 1.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-9:hover,
.emotion-9:focus-visible {
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  border-radius: 100%;
  background: rgba(84,94,255,0.06);
  box-shadow: 0px 0px 0px 8px rgba(84,94,255,0.06);
}

.emotion-10 {
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-10 path {
  fill: #686BB3!important;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div>
      <div
        onKeyDown={[Function]}
      >
        <div
          className="emotion-2"
        >
          <div>
            <div
              onClick={[Function]}
            >
              <div
                className="emotion-3"
              >
                <div
                  className="emotion-4"
                >
                  <div
                    className="emotion-5"
                  >
                    <input
                      aria-invalid={false}
                      className="emotion-6"
                      data-testid="input"
                      disabled={false}
                      id="textfield__00"
                      onChange={[Function]}
                      onKeyDown={[Function]}
                      placeholder="Custom Date"
                      required={false}
                      value="11/03/2020"
                    />
                    <label
                      className="emotion-7"
                      htmlFor="textfield__00"
                    >
                      Custom Date
                       
                    </label>
                  </div>
                  <div
                    aria-hidden={false}
                    className="emotion-8"
                  >
                    <div
                      className="emotion-9"
                      data-testid="calendar_button"
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      tabIndex={0}
                    >
                      <span
                        className="emotion-10"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
